# Temperature-Alert-and-Weather-Forecast-Agent

./: .gitignore  README.md  prediction.txt  private_keys.json  pyproject.toml
src/: main.py  private_keys.json  weather_prediction.py
src/agents/temperature/: TemperatureAlertAgent.py  message_printer.py
src/messages/: messages.py
